// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource generateResourcePages() should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with extra pages: Pages should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with extra pages: Pages should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with extra pages: Pages should match the snapshot 1`] = `
<DocumentFragment>
  <span>
    Custom Page for rareBooks
  </span>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with extra pages: values should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with extra pages: values should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with extra pages: values should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Published Rare Books
    </h1>
    <span>
      Contents for rareBooks
    </span>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Published
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with navigation: element should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span>
      Custom Navigation
    </span>
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with navigation: element should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span>
      Custom Navigation
    </span>
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with navigation: value should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with navigation: value should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { index: Page } should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { index: Page } should match the snapshot 1`] = `
<DocumentFragment>
  <span>
    Custom Index Page for rareBooks
  </span>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { index: false } should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { index: value } should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Tomes
    </span>
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { index: value } should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { show: Page } should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { show: Page } should match the snapshot 1`] = `
<DocumentFragment>
  <span>
    Custom Show Page for rareBooks
  </span>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { show: false } should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { show: value } should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with pages: { show: value } should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Tome
    </span>
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with title: value should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Books
    </span>
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with title: value should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Books
    </span>
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with title: value with pages: { index: value } should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Tomes
    </span>
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with title: value with pages: { index: value } should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Books
    </span>
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with title: value with subtitle: value should generate the index page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Books: the Publishing
    </span>
    <h1>
      Rare Books
    </h1>
    <div>
      <h1>
        Content for rareBooks
      </h1>
      <span
        class="mock-data-table"
      >
        There are 3 books!
      </span>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Rare Books
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Resource generateResourcePages() with title: value with subtitle: value should generate the show page should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <span
      aria-label="title"
    >
      Rare Books: the Publishing
    </span>
    <h1>
      Gideon the Ninth
    </h1>
    <div>
      <h1>
        Content for rareBook
      </h1>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Gideon the Ninth
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Slug
          </dt>
          <dd
            class="data-list-value"
          >
            gideon-9
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Author
          </dt>
          <dd
            class="data-list-value"
          >
            Tammsyn Muir
          </dd>
        </div>
      </dl>
    </div>
    <ul
      class="flex flex-col sm:flex-row page-breadcrumbs"
    >
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Home
        </span>
      </li>
      <li
        class="page-breadcrumb"
      >
        <a
          class="page-breadcrumb-link"
          href="/rare-books"
        >
          Rare Books
        </a>
      </li>
      <li
        class="page-breadcrumb"
      >
        <span
          class="page-breadcrumb-empty"
        >
          Gideon the Ninth
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
